objects/Invitation__c.object
<CustomObject>
    <fields>
        <fullName>Anrede__c</fullName>
        <label>Anrede</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Herr</fullName>
                </value>
                <value>
                    <fullName>Frau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invitation_URL__c</fullName>
        <formula>'https://vh24customers.force.com/VH24/Registration?Id='+Id+'&amp;PartnerId='+ Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invitation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitee_Id__c</fullName>
        <formula>CreatedBy.Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invitee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jahresgeb_hr_abrechnen__c</fullName>
        <label>Jahresgebühr abrechnen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nachname__c</fullName>
        <label>Nachname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partneranteil__c</fullName>
        <label>Partneranteil %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unternehmen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unternehmen</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vermittler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vermittler</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invitations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vorname__c</fullName>
        <label>Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Einladung</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invitation  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>